welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: Missing closing brace `}' assumed here
		while (!estSurBiscuit) {
                ^SlugSnail:20: error: ':' expected but identifier found.
def isFacingTrail(c==Color):Boolean = {
                   ^SlugSnail:39: error: identifier expected but '}' found.
}
^