welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
	    def hunt() {
	    	avance();
	    	var c = getCouleurSol();
	    	recule();
		while (!estSurBiscuit) {
			if (isFacingTrail(c)) {
				avance();
				baisseBrosse();
				leveBrosse();
			} else { 
				gauche();
				
			} 
		}
		prendBiscuit();
		}

def isFacingTrail(c==Color):Boolean = {
	if (estFaceMur) {
		return false
	} else {
	    avance();
	    var couleur = getCouleurSol()
	    recule();
	    if (couleur==c) {
	    	return true
	    } else { return false
	    }
	}
}     
   

